fix spacing missing between some elements

--- a/src/projects-container/components/projectModal.css
+++ b/src/projects-container/components/projectModal.css
@@ -201,6 +201,10 @@
   cursor: pointer;
 }
 
+.news__description {
+  padding-right: 10px;
+}
+
 .news__url {
   display: flex;
   justify-content: space-between;
